tests/baselines/reference/tsxResolveExternalModuleExportsTypes.errors.txt
foo.tsx(2,10): error TS2305: Module '"a"' has no exported member 'Test'.


==== foo.tsx (1 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    import { Test } from 'a';
             ~~~~
!!! error TS2305: Module '"a"' has no exported member 'Test'.
    const Foo = (<h1></h1>);
    
==== /node_modules/@types/a/index.d.ts (0 errors) ====
    declare var a: a.Foo;
    declare namespace a {
        interface Foo {}
    }
    export = a;
    
==== /node_modules/@types/b/index.d.ts (0 errors) ====
    import * as a from 'a';
    declare module 'a' {
        namespace Test {}
    
        interface Foo {
            Test: null;
        }
    }
    